調整個人資訊頁

--- a/personal.html
+++ b/personal.html
@@ -136,16 +136,16 @@
             <section id="personal">
                 <div class="container">
                     <h3>個人資訊</h3>
-                    <div class="linense card coming-soon">
+                    <div class="license card coming-soon">
                         <div class="card-content">
-                            <h3>My Zkaizoku Linense</h3>
+                            <h3>我的 ZKaizoku License</h3>
                             <div class="carousel">
                                 <div class="swiper">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <div class="img">
-                                                <img src="img/linense/linense01.png">
-                                                <a class="button" href="img/linense/linense01.png" data-fancybox>
+                                                <img src="img/license/license01.png">
+                                                <a class="button" href="img/license/license01.png" data-fancybox>
                                                     <i class="icon-Search"></i>
                                                 </a>
                                             </div>
@@ -168,7 +168,7 @@
                                                 </div>
                                                 <div class="input-group">
                                                     <label for="proportion">
-                                                        累積加成比例
+                                                        獎勵加成比例
                                                         <i class="icon-InfoCircle popUp--open" for="info"></i>
                                                     </label>
                                                     <input name="proportion" type="text" value="200%" disabled>
@@ -178,8 +178,8 @@
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="img">
-                                                <img src="img/linense/linense02.png">
-                                                <a class="button" href="img/linense/linense02.png" data-fancybox>
+                                                <img src="img/license/license02.png">
+                                                <a class="button" href="img/license/license02.png" data-fancybox>
                                                     <i class="icon-Search"></i>
                                                 </a>
                                             </div>
@@ -202,7 +202,7 @@
                                                 </div>
                                                 <div class="input-group">
                                                     <label for="proportion">
-                                                        累積加成比例
+                                                        獎勵加成比例
                                                         <i class="icon-InfoCircle popUp--open" for="info"></i>
                                                     </label>
                                                     <input name="proportion" type="text" value="200%" disabled>
@@ -212,8 +212,8 @@
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="img">
-                                                <img src="img/linense/linense03.png">
-                                                <a class="button" href="img/linense/linense03.png" data-fancybox>
+                                                <img src="img/license/license03.png">
+                                                <a class="button" href="img/license/license03.png" data-fancybox>
                                                     <i class="icon-Search"></i>
                                                 </a>
                                             </div>
@@ -236,7 +236,7 @@
                                                 </div>
                                                 <div class="input-group">
                                                     <label for="proportion">
-                                                        累積加成比例
+                                                        獎勵加成比例
                                                         <i class="icon-InfoCircle popUp--open" for="info"></i>
                                                     </label>
                                                     <input name="proportion" type="text" value="200%" disabled>
@@ -253,37 +253,40 @@
                     </div>
                     <div class="zkz card">
                         <div class="card-content">
-                            <h3>
-                                積分幣資訊
-                                <i class="icon-InfoCircle popUp--open" for="info"></i>
-                            </h3>
-                            <button class="btn-tertiary btn-s">加入$ZKZ</button>
-                            <div class="now">
-                                <h6>當前<br>積分幣數量</h6>
-                                <div class="value">
-                                    <span>
-                                        <img src="img/coin.png">
-                                        230
-                                    </span>
-                                </div>
+                            <div class="title">
+                                <h3>
+                                    我的$ZKZ
+                                    <i class="icon-InfoCircle popUp--open" for="info"></i>
+                                </h3>
+                                <button class="btn-tertiary btn-s">加入$ZKZ</button>
                             </div>
-                            <div class="accumulation">
-                                <h6>待領取<br>積分幣數量</h6>
-                                <div class="value">
-                                    <span>
+                            <div class="content">
+                                <div class="now">
+                                    <h6>$ZKZ餘額</h6>
+                                    <div class="value">
                                         <img src="img/coin.png">
-                                        100
-                                    </span>
+                                        <span>230</span>
+                                    </div>
+                                    <div class="btn"></div>
                                 </div>
-                                <button class="popUp--open" for="withdraw">領取積分幣</button>
+                                <div class="accumulation">
+                                    <h6>待領取$ZKZ</h6>
+                                    <div class="value">
+                                        <img src="img/coin.png">
+                                        <span>300.789</span>
+                                    </div>
+                                    <div class="btn">
+                                        <button class="popUp--open" for="withdraw">提領$ZKZ</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="record card">
                         <div class="card-content">
-                            <h3>歷史紀錄頁</h3>
+                            <h3>歷史紀錄</h3>
                             <ul class="tab">
-                                <li class="active">積分幣紀錄</li>
+                                <li class="active">提領紀錄</li>
                                 <li>交易紀錄</li>
                             </ul>
 
@@ -294,9 +297,9 @@
                                         <button>30天</button>
                                         <div class="dropdown-content">
                                             <ul>
-                                                <li class="active">30天</li>
-                                                <li>3個月</li>
-                                                <li>6個月</li>
+                                                <li class="active"><a href="javascript:void()">30天</a></li>
+                                                <li><a href="javascript:void()">3個月</a></li>
+                                                <li><a href="javascript:void()">6個月</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -307,13 +310,13 @@
                                         <button>1</button>
                                         <div class="dropdown-content">
                                             <ul>
-                                                <li class="active">1</li>
-                                                <li>2</li>
-                                                <li>3</li>
-                                                <li>4</li>
-                                                <li>5</li>
-                                                <li>6</li>
-                                                <li>7</li>
+                                                <li class="active"><a href="javascript:void()">1</a></li>
+                                                <li><a href="javascript:void()">2</a></li>
+                                                <li><a href="javascript:void()">3</a></li>
+                                                <li><a href="javascript:void()">4</a></li>
+                                                <li><a href="javascript:void()">5</a></li>
+                                                <li><a href="javascript:void()">6</a></li>
+                                                <li><a href="javascript:void()">7</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -333,6 +336,13 @@
                                             </tr>
                                         </thead>
                                         <tbody>
+                                            <tr>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
                                                 <td class="record-trackno"><span></span>0xa4c99bd...1365</td>
@@ -491,9 +501,10 @@
                                 <li>
                                     <div class="no-record">
                                         <div>
+                                            <img src="img/no-record.png">
                                             <h3>沒有紀錄</h3>
-                                            <p>快前往商城購買dNFT吧！</p>
-                                            <button onclick="location='shop.html'">前往商城</button>
+                                            <!-- <p>快前往商城購買dNFT吧！</p>
+                                            <button onclick="location='shop.html'">前往商城</button> -->
                                         </div>
                                     </div>
                                 </li>
@@ -581,20 +592,20 @@
         <div id="withdraw" class="popUp">
             <div class="popUp--container">
                 <button class="popUp--close"><i class="icon-Close"></i></button>
-                <h3>領取積分幣</h3>
+                <h3>提領$ZKZ</h3>
                 <div class="popUp--content">
                     <div class="img"><img src="img/coin.gif"></div>
                     <div class="content">
                         <div class="input-wrap">
-                            <label for="price">欲提領的積分幣數量</label>
+                            <label for="price">欲提領數量</label>
                             <div class="input-group">
                                 <input name="price" type="text" value="100">
                                 <label>/ 100</label>
                             </div>
-                            <span class="helper">當前積分幣不足！</span>
+                            <span class="helper">超過本次可提領上限！</span>
                         </div>
                         <div class="input-wrap">
-                            <label for="address">提領至地址</label>
+                            <label for="address">收款錢包</label>
                             <textarea name="address" rows="3"
                                 disabled>0x130jfq52McakyQlxu11g80sjfq52McakyQlx123D</textarea>
                         </div>
@@ -602,7 +613,7 @@
                 </div>
                 <div class="popUp--btns">
                     <button class="btn-tertiary close">取消</button>
-                    <button class="submit">領取</button>
+                    <button class="submit">確認</button>
                 </div>
             </div>
         </div>
@@ -614,34 +625,12 @@
     <!-- jQuery -->
     <script src="vendor/jquery.min.js"></script>
     <script type="text/javascript">
-        if ($('.linense').hasClass('coming-soon')) {
-            $('.linense button').attr('disabled', '')
-        }
-
-        $('#withdraw .submit').click(function () {
-            $(this).parent().siblings('h3').html('積分幣領取中')
-
-            $(this).parent().parent().find('[for=price]').html('本次提領的積分幣數量')
-
-            $(this).parent().parent().find('[name=price]').attr('disabled', '')
-
-            $(this).html('確認')
-            $(this).click(function () {
-                $('.popUp').removeClass('active')
-                $('.popUp').hide()
-                $('body').css('overflow-y', 'auto')
-            })
-
-            $(this).siblings('.close').html('領取紀錄')
-            $(this).siblings('.close').click(function () {
-                $('.popUp').removeClass('active')
-                $('.popUp').hide()
-                $('body').css('overflow-y', 'auto')
-
-                var recordOffset = $('.record').offset().top
-                $('html,body').animate({ scrollTop: recordOffset - 120 }, 100)
-            })
-        })
+        var mediaPC = window.matchMedia('(max-width: 1440px)')
+        var mediaLaptop = window.matchMedia('(max-width: 1280px)')
+        var mediaPad = window.matchMedia('(max-width: 1024px)')
+        var mediaSmallPad = window.matchMedia('(max-width: 768px)')
+        var mediaMobile = window.matchMedia('(max-width: 516px)')
+        var mediaSmallMobile = window.matchMedia('(max-width: 320px)')
     </script>
 
     <!-- Custom settings -->
@@ -651,7 +640,7 @@
     <script src="js/tab.js"></script>
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
-    <script src="js/record.js"></script>
+    <script src="js/personal.js"></script>
     <script src="js/buttons.js"></script>
 
     <!-- Fancybox 套件 -->
@@ -663,14 +652,14 @@
     <!-- Swiper 套件 -->
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript">
-        // Linense 輪播
-        var swiperLinense = new Swiper('.linense .swiper', {
+        // license 輪播
+        var swiperlicense = new Swiper('.license .swiper', {
             loop: true,
             slidesPerView: 1,
             centeredSlides: true,
             navigation: {
-                nextEl: ".linense .swiper-button-next",
-                prevEl: ".linense .swiper-button-prev",
+                nextEl: ".license .swiper-button-next",
+                prevEl: ".license .swiper-button-prev",
             },
             on: {
                 touchMove: function (e) {
