--- a/index.html
+++ b/index.html
@@ -193,8 +193,20 @@
 						<div class="carousel dark">
 							<div class="swiper">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-01.jpg">
+									<div class="swiper-slide" onclick="location='guess-the-number.html'">
+										<img src="img/game/guess-the-number/thumb.jpg">
+										<div class="hover">
+											<h4>Guess the Number</h4>
+											<ul class="tags">
+												<li>fortune</li>
+												<li>dice</li>
+												<li>&lt; 3 minutes</li>
+											</ul>
+											<button class="btn-tertiary">View Details</button>
+										</div>
+									</div>
+									<div class="swiper-slide" onclick="location='bet-big-small.html'">
+										<img src="img/game/bet-big-small/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -206,7 +218,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-02.jpg">
+										<img src="img/game/odd-even-betting/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -218,7 +230,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-03.jpg">
+										<img src="img/game/higher-number-wins/thumg.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -230,7 +242,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-04.jpg">
+										<img src="img/game/game-05/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -242,7 +254,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-05.jpg">
+										<img src="img/game/game-06/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -254,7 +266,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-06.jpg">
+										<img src="img/game/game-07/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -266,7 +278,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-07.jpg">
+										<img src="img/game/game-08/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -278,7 +290,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-08.jpg">
+										<img src="img/game/game-09/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -290,19 +302,7 @@
 										</div>
 									</div>
 									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-09.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-thumb-10.jpg">
+										<img src="img/game/game-10/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -556,6 +556,14 @@
 
 	<!-- jQuery -->
 	<script src="vendor/jquery.min.js"></script>
+	<script type="text/javascript">
+		var mediaPC = window.matchMedia('(max-width: 1440px)')
+		var mediaLaptop = window.matchMedia('(max-width: 1280px)')
+		var mediaPad = window.matchMedia('(max-width: 1024px)')
+		var mediaSmallPad = window.matchMedia('(max-width: 768px)')
+		var mediaMobile = window.matchMedia('(max-width: 516px)')
+		var mediaSmallMobile = window.matchMedia('(max-width: 320px)')
+	</script>
 
 	<!-- Custom settings -->
 	<script src="js/navigation.js"></script>
